css/nrelstyle.css
/* ... */
@font-face {
    font-family: 'Pt Sans Narrow';
    src: url('../fonts/PTSans-Narrow.eot');
    src: url('../fonts/PTSans-Narrow.eot?#iefix') format('embedded-opentype'),
        url('../fonts/PTSans-Narrow.woff2') format('woff2'),
        url('../fonts/PTSans-Narrow.woff') format('woff'),
        url('../fonts/PTSans-Narrow.ttf') format('truetype'),
        url('../fonts/PTSans-Narrow.svg#PTSans-Narrow') format('svg');
    font-weight: normal;
    font-style: normal;
}

.myh1,
.myh2 {
    color: #333333;
    font-family: 'Roboto';
    font-weight: normal;
    font-style: normal;
}

.myh3,
.myh4 {
    color: #CC6600;
    font-family: 'Roboto';
    font-weight: normal;
    font-style: normal;
}

.myh4 {
    color: #CC6600;
    font-family: 'Pt Sans Narrow';
}

p,
span {
    color: #333;
    font-family: 'Droid Serif';
}

.largertx {
    color: #333;
    font-family: 'Droid Serif';
    font-size: 14pt;
    line-height: 1.35;
}

body {
    color: #333;
    font-family: 'Droid Serif';
    font-size: 13px;
    font-weight: 400;
    line-height: 1.65;
    padding: 0;
}

/* placeholder hyperlinks */
a:not([href]) {
    cursor: pointer;
}

a:link {
    color: #0062A0;

}

a:visited {
    color: #535486;
}

a:hover {
    color: #00A3E0;
}

.nreltop {
    padding-left: 3%;
    padding-right: 5%;
    background-color: #0079C5;
    height: 60px;
    border-bottom: 4px solid #005D92 !important;
    -webkit-align-content: center;
    -ms-flex-line-pack: center;
    align-content: center;
}

.nreltitle {
    color: #ffffff !important;
    font-family: 'Roboto', sans-serif;
    font-weight: 100;
    font-style: normal;
    text-decoration: none !important;
    font-size: 24pt;
    line-height: 70px;
    text-transform: uppercase !important;
    padding-left: 5px;
}

/*top bar and horizontal navigation*/

.topbar {
    position: relative;
    top: 0;
    left: 0;
    float: left;
    padding-top: 0;
    background: #000000;
    width: 100%;
}

@media (min-width: 701px) {
    .topbar {
        height: 46px;
        background-color: #000000 !important;
    }
}

.topmenu {
    font-family: 'Pt Sans Narrow', sans-serif;
    font-size: 10pt;
    font-weight: normal;
    text-decoration: none !important;
    width: 100%;
    position: relative;
    float: left;
    text-align: center;
    text-transform: uppercase !important;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.topmenu ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-decoration: none !important;
    color: #ffffff !important;
    font-size: 10pt;
    clear: left;
    position: relative;
    display: inline-block;

}

.topmenu li {
    float: left;
}

.topmenu li a {
    display: block;
    color: #ffffff !important;
    text-align: center;
    padding: 12px 12px;
    font-size: 12pt;
    text-decoration: none !important;
    position: relative;
}

/* Change the link color to white with blue top on hover */
.topmenu li a:hover {
    background-color: #ffffff !important;
    color: #000000 !important;
    /*    font-size: 12pt;*/
    border-top: 4px solid #1d449c !important;
}

/* Change the link color to white with blue top on hover */
.topmenu a:active,
.topmenu a:focus {
    background-color: #ffffff !important;
    color: #000000 !important;
    /*    font-size: 12pt;*/
    border-top: 4px solid #62D2FF !important;
}

.topbartitle {
    position: relative;
    top: 0;
    left: 0;
    float: left;
    padding-top: 7px;
    padding-bottom: 7px;
    font-weight: lighter;
    text-align: left;
    font-size: 26pt;
    color: #0079C5;
    line-height: 120%;
    margin-left: 5%;
    margin-right: 5%;
}

@media (max-width: 430px) {
    .nreltitle {
        font-size: 10pt;
    }

    .topbar {
        position: relative;
        top: 0;
        left: 0;
        float: left;
        padding-top: 0;
        background: #000000;
        width: 100%;
    }

    .hvacimage {
        display: none;
    }

    .topmenu li a {
        display: block;
        color: #ffffff !important;
        text-align: center;
        padding: 10px 10px;
        font-size: 10pt;
        text-decoration: none !important;
        position: relative;
    }
}


/* headers and underlines */
hr {
    display: block;
    margin: 0.5em auto;
    border: 1px #0062A0;
    border-bottom-style: dotted;
}

/*headers*/
.myh1 {
    text-align: left;
    font-size: 28px;
    padding-top: 15px;
    padding-bottom: 10px;
    line-height: 110%;
}

.myh2 {
    font-weight: bold;
    text-align: left;
    font-size: 24px;
    padding-top: 15px;
    padding-bottom: 10px;
    line-height: 110%;
}

.myh3 {
    text-align: left;
    font-size: 18px;
    line-height: 120%;
    padding-top: 10px;
    padding-bottom: 8px;
    margin-top: 14px;
}

.myh4 {
    text-align: left;
    font-size: 18px;
    line-height: 160%;
    padding-top: 10px;
    padding-bottom: 8px;
    margin-top: 14px;
    text-decoration: none;
    font-weight: normal;
}

.myhome {
    font-family: 'Roboto';
    text-align: left;
    font-size: 14px;
    line-height: 160%;
    padding-top: 10px;
    padding-bottom: 8px;
    margin-top: 14px;
    text-decoration: none;
    font-weight: 100;
    font-style: normal;
    color: #CC6600;
}

.doctitle {
    font-family: 'Droid Serif';
    font-weight: bold;
    font-style: italic;
    text-decoration: underline;
}

.myh3bold {
    font-weight: bold;
    text-align: left;
    font-size: 14px;
    letter-spacing: 2px;
    color: #1D428A;
    line-height: 110%;
    padding-top: 10px;
    padding-bottom: 8px;
    margin-top: 14px;
}

/* source of information style */
.source {
    font-style: italic;
    font-size: 10pt;
    line-height: 150% !important;
    font-weight: 100;
    color: #666666;
    padding-top: 3px;
    padding-bottom: 4px;
    font-family: 'Pt Sans Narrow', sans-serif;
}
/* ... */

